--- a/app/public/survey.css
+++ b/app/public/survey.css
@@ -1,2 +1,110 @@
 /*Survey CSS*/
 
+.heading {
+	font-family: Anton;
+	color: yellow;
+	text-shadow: 7px 7px black;
+	text-align: center;	
+	font-size: 80px;
+}
+
+
+
+.parallax {
+    /* The image used */
+    background-image: url("legpeeps.jpg");
+    /* Set a specific height */
+    min-height: 600px; 
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.parallax-2 {
+    /* The image used */
+    background-image: url("legpeeps2.jpg");
+    /* Set a specific height */
+    min-height: 600px; 
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/*.question-box {    
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    align-content: center;
+    font-size: 30px;
+    width: 250px;
+    height: 150px;
+    margin: 60px;
+    }
+
+.question {
+	font-size: 20px;
+}
+
+.leghead1 {
+	align-content: left;
+	height: 550px;
+	width: 500px;
+	margin-right: 100px;
+}*/
+
+/*.leghead2 {
+	align-content: center;
+	height: 550px;
+	width: 500px;
+	margin-right: 100px;
+}
+
+.leghead3 {
+	align-content: right;
+	height: 550px;
+	width: 500px;
+*/
+
+.text-block {
+    /*position: absolute;*/
+    bottom: 150px;
+    right: 150px;
+    /*background-color: black;*/
+    color: black;
+    padding-left: 200px;
+    padding-right: 200px;
+}
+.container {
+    position: relative;
+    font-family: Arial;
+}
+
+.head {
+	margin-top: 10px;
+	margin-left: -100px;
+	padding-right: 70px;
+	height: 33%;
+	width: 33%;
+	align-content: left;
+}
+
+.head-2 {
+	margin-top: 10px;
+	padding-right: 60px;
+	height: 33%;
+	width: 33%;
+	align-content: center;
+}
+
+
+.head-3 {
+	padding-right: -500px;
+	height: 33%;
+	width: 33%;
+	align-content: right;
+}
